<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rotate"
        android:icon="@drawable/ic_screen_rotation_24dp"
        android:title="@string/action_rotate"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_list"
        android:icon="@drawable/ic_view_list_24dp"
        android:title="@string/action_list"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_help_outline_24dp"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />
</menu>