<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.vovnit.cashmachineprogramming.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_margin="4dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TypeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_cash_machine"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/ChooseSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardElevation="4dp"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MachineDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_machine_description" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardElevation="4dp"

        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/OriginalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/FormatedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edited_text" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
